<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:fitsSystemWindows="true"
    android:background="@drawable/splash_bg"
    tools:context=".Activities.PhoneActivity">

    <TextView
        android:id="@+id/phoneLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verify_your_phone_number"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_will_send_sms_to_verify_the_phone_number"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneLabel" />

        <LinearLayout
            android:id="@+id/layout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintBottom_toTopOf="@id/dividerText"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/phoneBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/textbox_outline"
                    android:ems="10"
                    android:layout_marginTop="20dp"
                    android:inputType="phone"
                    android:hint="@string/enter_your_phone_number"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/continueBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:backgroundTint="@color/coralPink"
                    android:text="@string/continuee" />
            </LinearLayout>

    <TextView
        android:id="@+id/dividerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/layout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dividerText"
            android:orientation="vertical">

                <EditText
                    android:id="@+id/emailBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your email"
                    android:layout_marginTop="20dp"
                    android:inputType="textEmailAddress"
                    android:background="@drawable/textbox_outline"
                    android:padding="10dp" />

                <EditText
                    android:id="@+id/passwordBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Enter your password"
                    android:inputType="textPassword"
                    android:background="@drawable/textbox_outline"
                    android:padding="8dp"
                    android:layout_marginTop="10dp"/>

                <Button
                    android:id="@+id/emailLoginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Login /Sign Up with Email"
                    android:backgroundTint="@color/coralPink"
                    android:layout_marginTop="10dp"/>
            </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>